[gd_scene load_steps=6 format=3 uid="uid://bpha3godigcg2"]

[ext_resource type="Script" path="res://scenes/scripts/ui/menu_loadout_selection.gd" id="1_wywrc"]
[ext_resource type="Texture2D" uid="uid://24sxb8icxn75" path="res://assets/textures/prototypes/loadout-menu-concept.png" id="2_31rtj"]
[ext_resource type="Theme" uid="uid://b1a5sjt2xibwo" path="res://assets/themes/strata_theme.tres" id="6_u0kst"]
[ext_resource type="Texture2D" uid="uid://daogoq1xsiexr" path="res://assets/textures/prototypes/return_icon.png" id="7_us3rs"]
[ext_resource type="Texture2D" uid="uid://ddrwh5rjfsmko" path="res://assets/textures/prototypes/arrow.png" id="9_3c5an"]

[node name="LoadoutPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 960.0
offset_right = 960.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wywrc")

[node name="MenuConcept" type="Sprite2D" parent="."]
position = Vector2(480, 270)
texture = ExtResource("2_31rtj")

[node name="ReturnToMainMenu" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 90.0
offset_bottom = 90.0
focus_neighbor_right = NodePath("../../../ConfigButton")
theme = ExtResource("6_u0kst")
texture_normal = ExtResource("7_us3rs")

[node name="StartButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -40.0
offset_right = 70.0
offset_bottom = 42.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(-1, 1)
focus_neighbor_right = NodePath("../../../ConfigButton")
theme = ExtResource("6_u0kst")
texture_normal = ExtResource("7_us3rs")

[node name="ColorBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.5
offset_top = -111.0
offset_right = 360.5
grow_horizontal = 2
grow_vertical = 0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="LoadoutSelection" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.5
offset_top = 379.0
offset_right = -22.5
offset_bottom = 403.0
grow_horizontal = 2
color = Color(0.356863, 0.356863, 0.356863, 1)

[node name="Loadout" type="Label" parent="LoadoutSelection"]
layout_mode = 0
offset_top = -23.0
offset_right = 195.0
theme = ExtResource("6_u0kst")
text = "SELECT LOADOUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadoutName" type="Label" parent="LoadoutSelection"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.5
offset_right = 97.5
offset_bottom = 24.0
grow_horizontal = 2
theme = ExtResource("6_u0kst")
text = "LOADOUT1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="LoadoutSelection"]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = -3.0
offset_right = 197.0
offset_bottom = 28.0
theme = ExtResource("6_u0kst")
placeholder_text = "New Loadout"
alignment = 1
flat = true

[node name="Sprite2D" type="Sprite2D" parent="LoadoutSelection"]
position = Vector2(208.5, 12)
texture = ExtResource("9_3c5an")

[node name="Sprite2D2" type="Sprite2D" parent="LoadoutSelection"]
position = Vector2(-12.5, 12)
scale = Vector2(-1, 1)
texture = ExtResource("9_3c5an")

[node name="CustomizeLoadoutContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 126.0
offset_top = 408.0
offset_right = 834.0
offset_bottom = 534.0

[node name="LoadoutLabels" type="HBoxContainer" parent="CustomizeLoadoutContainer"]
layout_mode = 2

[node name="PrimaryWeapon" type="Label" parent="CustomizeLoadoutContainer/LoadoutLabels"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("6_u0kst")
text = "PRIMARY WEAPON"
horizontal_alignment = 1

[node name="SecondaryWeapon" type="Label" parent="CustomizeLoadoutContainer/LoadoutLabels"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme = ExtResource("6_u0kst")
text = "SECONDARY WEAPON
"
horizontal_alignment = 1

[node name="StarterItem" type="Label" parent="CustomizeLoadoutContainer/LoadoutLabels"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("6_u0kst")
text = "STARTER ITEM
"
horizontal_alignment = 1

[node name="LoadoutLists" type="HBoxContainer" parent="CustomizeLoadoutContainer"]
layout_mode = 2

[node name="PrimaryWeaponsList" type="ItemList" parent="CustomizeLoadoutContainer/LoadoutLists"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("6_u0kst")
item_count = 3
item_0/text = "MINIGUN"
item_1/text = "BURST LASER"
item_2/text = "RAILGUN"

[node name="SecondaryWeaponsList" type="ItemList" parent="CustomizeLoadoutContainer/LoadoutLists"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("6_u0kst")
item_count = 3
item_0/text = "GUIDED MISSILES"
item_1/text = "STASIS BOMB"
item_2/text = "CHARGED LASER"

[node name="StarterItemsList" type="ItemList" parent="CustomizeLoadoutContainer/LoadoutLists"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("6_u0kst")
item_count = 3
item_0/text = "I.C. AMPLIFIER"
item_1/text = "ADDITIONAL HARDPOINT"
item_2/text = "PLASTEEL WING REINFORCEMENT"

[connection signal="pressed" from="ReturnToMainMenu" to="." method="_on_return_to_main_menu_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="item_selected" from="CustomizeLoadoutContainer/LoadoutLists/PrimaryWeaponsList" to="." method="_on_primary_weapons_list_item_selected"]
[connection signal="item_selected" from="CustomizeLoadoutContainer/LoadoutLists/SecondaryWeaponsList" to="." method="_on_secondary_weapons_list_item_selected"]
[connection signal="item_selected" from="CustomizeLoadoutContainer/LoadoutLists/StarterItemsList" to="." method="_on_starter_items_list_item_selected"]
